js/js.translator/testData/incremental/invalidation/functionTypeInterface/lib2/l2a.1.kt
fun getString(): String {
    konst s: suspend (Any) -> Unit = { _ -> }
    return getTypeName(s)
}
